@@ -1,6 +1,6 @@
 Metadata-Version: 2.1
 Name: quisk
-Version: 4.2.32
+Version: 4.2.33
 Summary: QUISK is a Software Defined Radio (SDR) transceiver that can control various radio hardware.
 Home-page: http://james.ahlstrom.name/quisk/
 Author: James C. Ahlstrom
